# libAliasToken

./: .travis.yml  CMakeLists.txt  README.md
include/: Alias.h  AliasToken.h
lib/: Alias.cpp  AliasToken.cpp  CMakeLists.txt
test/: CMakeLists.txt  pass.cpp  run.sh
